# arxiv-bot

./: 00-scraper.ipynb  01-arxiv-data-builder.ipynb  02-indexer.ipynb  README.md  pyproject.toml  requirements.txt  scraper.py
arxiv_bot/: __init__.py  templates.py
arxiv_bot/knowledge_base/: constructors.py  database.py
arxiv_bot/manager/: bots.py
arxiv_bot/utils/: logger.py
